--- a/src/Components/QuizQus/QuizQus.css
+++ b/src/Components/QuizQus/QuizQus.css
@@ -2,13 +2,36 @@
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+
 }
 
 .quiz-details {
-    border: 1px solid goldenrod;
+    border: 3px solid goldenrod;
+    box-shadow: 10px 10px 10px 10px #888888;
     text-align: center;
     width: 70%;
     margin: 0 auto;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-radius: 15px;
+    padding: 15px;
+    margin-bottom: 50px;
+
+}
+
+.each-option {
+    border: 1px solid blue;
+    margin-right: 10px;
+    margin-left: 10px;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.each-option:hover {
+    background-color: lightblue;
+}
+
+.eye-icon {
+    width: 20px;
+    margin-left: 890px;
+
 }
